# coreboot

./: .gitmodules  MAINTAINERS  cbmem
Documentation/: distributions.md  distributions.md.orig
Documentation/mainboard/: index.md
Documentation/mainboard/starlabs/: labtop.md  mk_iv.md  starbook_cezanne.md  starfighter_rpl.md
Documentation/releases/: coreboot-4.15-relnotes.md  coreboot-4.15-relnotes.md.orig
configs/: config.starlabs_byte_adl  config.starlabs_byte_cezanne  config.starlabs_labtop_cml  config.starlabs_labtop_cml_nb  config.starlabs_labtop_kbl  config.starlabs_labtop_kbl.orig  config.starlabs_labtop_kbl_nb  config.starlabs_labtop_mkiv_kblr  config.starlabs_labtop_tgl  config.starlabs_lite_adl  config.starlabs_lite_apl  config.starlabs_lite_apl_nb  config.starlabs_lite_glk  config.starlabs_lite_glk_nb  config.starlabs_lite_glkr  config.starlabs_pikachu  config.starlabs_qemu  config.starlabs_starbook_adl  config.starlabs_starbook_cezanne  config.starlabs_starbook_rpl  config.starlabs_starbook_tgl  config.starlabs_starbook_tgl_nb  config.starlabs_starfighter_rpl
src/acpi/: acpi.c
src/arch/x86/: smbios.c  smbios_defaults.c
src/commonlib/include/commonlib/: coreboot_tables.h
src/cpu/x86/: bootblock.S
src/device/: Kconfig  Makefile.inc  pciexp_device.c  resource_allocator_v4.5.c  resource_allocator_v4.c
src/drivers/crb/: tis.c
src/drivers/i2c/generic/: chip.h  generic.c
src/drivers/i2c/tpm/: tis_atmel.c
src/drivers/intel/fsp2_0/: Kconfig  silicon_init.c
src/drivers/option/: Kconfig  cfr.c  cfr.h
src/drivers/pc80/tpm/: tis.c
src/drivers/spi/tpm/: tis.c
src/drivers/tpm/: ppi.c
src/drivers/usb/acpi/: chip.h  intel_bluetooth.c  usb_acpi.c
src/ec/starlabs/: Kconfig
src/ec/starlabs/it5570/: Kconfig  Makefile.inc  chip.h  ec.c  ec.h
src/ec/starlabs/it8987/: Kconfig  Makefile.inc  Makefile.inc.orig  chip.h.orig  ec.c  ec.c.orig  ec.h  ec.h.orig
src/ec/starlabs/ite/: Kconfig  Makefile.inc  ec.c
src/ec/starlabs/merlin/: Kconfig  Makefile.inc  chip.h  ec.c  ec.h  ite.c  nuvoton.c
src/include/: hob.h  memrange.h  smbios.h  smmstore.h
src/include/cpu/x86/: lapic.h.orig
src/include/device/: pci_ids.h.orig  resource.h
src/lib/: Kconfig  Makefile.inc  build_payload_hobs.c  memrange.c  program.ld  selfboot.c
src/mainboard/asus/h61-series/: Kconfig_BACKUP_68897
src/mainboard/google/brya/: romstage.c
src/mainboard/google/cherry/: Kconfig.orig  boardid.c  mainboard.c  romstage.c  romstage.c.orig
src/mainboard/google/guybrush/: Kconfig  port_descriptors.c
src/mainboard/google/volteer/: Kconfig.orig
src/mainboard/ocp/deltalake/: vpd.h
src/mainboard/starlabs/byte_adl/: Kconfig  bootblock.c  cfr.c
src/mainboard/starlabs/cezanne/: Kconfig  Kconfig.name  Makefile.inc  board.fmd  bootblock.c  cmos.default  cmos.layout  dsdt.asl  fw.cfg  hda_verb.c  mainboard.c  romstage.c  smbios.c
src/mainboard/starlabs/flash/: Kconfig  board_info.txt  romstage.c
src/mainboard/starlabs/labtop/: Kconfig  Kconfig.name  Kconfig.orig  Makefile.inc  bootblock.c  bootblock.c.orig  cmos.default  cmos.default.orig  cmos.layout  cmos.layout.orig  dsdt.asl  dsdt.asl.orig  gpio.c  hda_verb.c  hda_verb.c.orig  mainboard.c  mainboard.c.orig  mainboard.c.save  ramstage.c  ramstage.c.orig
src/mainboard/starlabs/labtop_mk_iv/: Kconfig  Kconfig.name  Makefile.inc  dsdt.asl
src/security/tpm/: tss.h
src/security/vboot/: secdata_tpm.c
src/soc/amd/cezanne/: chip.h  (+2 more)
tests/: Makefile.inc
util/cbfstool/: ifittool
util/cbmem/: Disable.txt
util/crossgcc/: buildgcc  buildgcc.orig
util/ectool/: all  base  test  test2  wireless
util/intelfit/: OEMKeyManifest.xml  README.md  bios.xml  meson.build  meson_options.txt  meu_config.xml.in  spi.xml.in  stitch.sh
util/inteltool/: gpio.c  gpio_groups.c  inteltool.c  inteltool.h  pcr.c
util/inteltool/gpio_names/: geminilake.h
util/spd_tools/ddr4/: gen_part_id  gen_spd  labtop.json.txt
util/vboot_lib/cgpt/: cgpt_add.o.d  cgpt_boot.o.d  cgpt_common.o.d  cgpt_create.o.d  cgpt_edit.o.d  cgpt_find.o.d  cgpt_nor.o.d  cgpt_prioritize.o.d  cgpt_show.o.d
util/vboot_lib/futility/: dump_kernel_config_lib.o.d
(+400 files in other folders)
